<resources>
    <string name="app_name">yuantu</string>
    <string name="user_name">用户名:</string>
    <string name="user_pwd">密　码:</string>
    <string name="rember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="company">远途公司</string>
    <string name="home_name">远途公司水质监测系统</string>
</resources>
