<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#FFF"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textSize="30dp"
                />
            <EditText
                android:id="@+id/username"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/userpwd"
                android:inputType="text"
                android:lines="1"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_pwd"
                android:textStyle="bold"
                android:textSize="30dp"
                />
            <EditText
                android:id="@+id/userpwd"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:lines="1"
                android:inputType="textPassword"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
           <CheckBox
               android:id="@+id/rem_pwd"
               android:layout_marginLeft="30dp"
               android:layout_marginRight="30dp"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/rember_pwd"/>
            <CheckBox
                android:id="@+id/auto_log"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auto_login"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="23sp"
                android:background="#FFF"/>
            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="23sp"
                android:background="#FFF"
                android:text="@string/register"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>
</LinearLayout>